datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Admin {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  username  String
  password  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  Books Book[]
}

model Book {
  id           Int      @id @default(autoincrement())
  title        String   @unique
  author       String
  publisher    String
  year         Int
  description  String
  ISBN         String
  creatorAdmin Admin    @relation(fields: [createdBy], references: [id])
  createdBy    Int
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  Loans Loan[]
}

model User {
  id           Int    @id @default(autoincrement())
  email        String @unique
  phoneNumber String
  username     String
  password     String

  Loans Loan[]
}

model Loan {
  id        Int      @id @default(autoincrement())
  books     Book     @relation(fields: [bookId], references: [id])
  bookId    Int
  users     User     @relation(fields: [userId], references: [id])
  userId    Int
  status    String   @default("Not Returned")
  startDate DateTime 
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  Fines Fine[]
}

model Fine {
  id        Int      @id @default(autoincrement())
  value     String
  loan      Loan     @relation(fields: [loanId], references: [id])
  loanId    Int
  status    String   @default("Not Paid")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
